<resources>
    <string name="app_name">Food App</string>
    <string name="form_txt6">Add Promotions</string>
    <string name="desc_1">2 plates + FREE mediam Sprite</string>
    <string name="promo_add">ADD TO BAG</string>
    <string name="homeaddfood">ADD NEW FOODS</string>
    <string name="homeaddpromo">ADD NEW PROMOTIONS</string>
    <string name="homeviewfood">VIEW FOODS</string>
    <string name="homeviewpromo">VIEW PROMOTIONS</string>
    <string name="homeaddorder">ADD NEW ORDERS</string>
    <string name="homevieworder">VIEW ORDERS</string>
    <string name="restuarantname1">Olive Garden</string>
    <string name="restuarantname2">DFC</string>
    <string name="restuarantname3">Take Away</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_navigation_drawer">Foodora</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="food_item_number">Food Item Number</string>
    <string name="food_name">Food Name</string>
    <string name="quantity_of_item">Quantity of Item</string>
    <string name="add">Add</string>
    <string name="add_deadline">Add Deadline</string>
    <string name="description_of_promotion">Description of Promotion</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Don\'t remember password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sing_up">Sing Up</string>
    <string name="save_your_money">Save your Money</string>
    <string name="check_out_our_current_specials">Check out our current specials</string>
    <string name="pastha">Pastha</string>
    <string name="pasta">Pasta</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sing_in">Sing In</string>
    <string name="user_name">John Wick</string>
    <string name="user_email">johnwick@gmail.com</string>
    <string name="textview">TextView</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="promotion">promotion</string>

    <string name="driver_name">Name</string>
    <string name="rating_label">Rating</string>
    <string name="req_deliver_btn">Request to Deliver</string>
    <string name="user_button">User Button</string>
    <string name="view_as_restaurant">View as Restaurant</string>
    <string name="dateDeadline" />
    <string name="deadlinedate">Date</string>
    <string name="promoNumber">Promotion Number</string>
    <string name="foodname">Food Name</string>
    <string name="promotiondescription">Promotion Description</string>
    <string name="imgUpload">Upload Image</string>
    <string name="add_qty">Quantity</string>
    <string name="msg_update_qty">Edit Quantity</string>
    <string name="btnSelect">SELECT</string>
    <string-array name="account_types">
        <item>Customer</item>
        <item>Restaurant</item>
        <item>Delivery</item>
    </string-array>
</resources>
