<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_foods"
            android:icon="@drawable/ic_food"
            android:title="Foods" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/ic_restaurant"
            android:title="Restaurants" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/ic_promotion"
            android:title="Promotions" />
        <item
            android:id="@+id/nav_bag"
            android:icon="@drawable/ic_bag"
            android:title="My Bag" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
