<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic12"
    app:layout_constraintBaseline_creator="@android:integer/config_mediumAnimTime"
    tools:context=".Add_Promotions">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="380dp"
        android:layout_height="586dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/form_txt6"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTxt2"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toTopOf="@+id/scrollView3"
        tools:layout_conversion_wrapHeight="171"
        tools:layout_conversion_wrapWidth="1080" />

    <EditText
        android:id="@+id/editTxt1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/food_item_number"
        android:inputType="text"
        android:textColor="@color/login_form_details_medium"
        android:textColorHint="@color/login_form_details_medium"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toBottomOf="@+id/editTxt0"
        tools:layout_conversion_wrapHeight="79"
        tools:layout_conversion_wrapWidth="710" />

    <EditText
        android:id="@+id/editTxt2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/food_name"
        android:inputType="text"
        android:textColorHint="@color/login_form_details_medium"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toBottomOf="@id/editTxt1"
        tools:layout_conversion_wrapHeight="79"
        tools:layout_conversion_wrapWidth="710" />

    <EditText
        android:id="@+id/editTxt3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/quantity_of_item"
        android:inputType="text"
        android:textColorHint="@color/login_form_details_medium"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toBottomOf="@id/editTxt2"
        tools:layout_conversion_wrapHeight="79"
        tools:layout_conversion_wrapWidth="710" />

    <EditText
        android:id="@+id/editTxt4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/description_of_promotion"
        android:inputType="text"
        android:textColorHint="@color/login_form_details_medium"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toBottomOf="@id/editTxt3"
        tools:layout_conversion_wrapHeight="79"
        tools:layout_conversion_wrapWidth="710" />

    <Button
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="?android:attr/colorButtonNormal"
        android:text="@string/add_deadline"
        android:textColorHint="@color/login_form_details_medium"
        android:textSize="25dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_wrapHeight="165"
        tools:layout_conversion_wrapWidth="677" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="153dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_conversion_wrapHeight="126"
        tools:layout_conversion_wrapWidth="402" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/deadlinedate"
        android:inputType="textPersonName"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toBottomOf="@+id/editTxt4" />

    <EditText
        android:id="@+id/editTxt0"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/promoNumber"
        android:inputType="textPersonName"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>
